# TUB_Fundamental

./: README.md
AlogrithmDatastructure/Blatt00/: .swo  .swp  Abgaben.txt  results_Blatt00.txt
AlogrithmDatastructure/Blatt00/src/: Aufgabe0.java
AlogrithmDatastructure/Blatt01/: results_Blatt01.txt
AlogrithmDatastructure/Blatt01/src/: ConvexPolygon.java  Pair.java  Polygon.java  RegularPolygon.java  Shape.java  Tetragon.java  Triangle.java
AlogrithmDatastructure/Blatt02/: results_Blatt02.txt
AlogrithmDatastructure/Blatt02/src/: Bettelmann.java  Card.java  Dec2Bin.java
AlogrithmDatastructure/Blatt03/: results_Blatt03.txt
AlogrithmDatastructure/Blatt03/src/: PermutationTest.java
AlogrithmDatastructure/Blatt04/: results_Blatt04.txt
AlogrithmDatastructure/Blatt04/src/: Board.java  BoardTest.java  TicTacToe.java  TicTacToeTest.java
AlogrithmDatastructure/Blatt05/: results_Blatt05.txt
AlogrithmDatastructure/Blatt05/src/: Genomics.java  RowOfBowls.java  RowOfBowlsTest.java
AlogrithmDatastructure/Blatt06/: results_Blatt06.txt
AlogrithmDatastructure/Blatt06/src/: DepthFirstPaths.java  DepthFirstPathsTest.java  Graph.java  Maze.java  MazeTest.java  RandomDepthFirstPaths.java  RandomDepthFirstPathsTest.java
AlogrithmDatastructure/Blatt07/: results_Blatt07.txt
AlogrithmDatastructure/Blatt07/src/: UF.java  (+3 more)
AlogrithmDatastructure/Blatt08/: results_Blatt08.txt
ComputerNetwork/Praxis1/: members.txt  webserver  webserver.c
ComputerNetwork/Praxis2/: CMakeLists.txt  webserver.c
ComputerNetwork/Praxis3/: CMakeLists.txt  zmq_distributor.c  zmq_worker.c
(+27 files in other folders)
